# otus_hw_10

./: .travis.yml  CMakeLists.txt  README.md  bintray-descriptor.in.json
include/: command_reader.h  iobserver.h  writer.h
src/: command_reader.cpp  main.cpp
tests/: test_reader.cpp  test_writer.cpp
